--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-@charset "utf-8";
-
 @-moz-viewport { width: device-width; scale: 1; }
 @-ms-viewport { width: device-width; scale: 1; }
 @-o-viewport { width: device-width; scale: 1; }
@@ -7,16 +5,32 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
-    box-sizing: border-box;
-    
-	-moz-text-size-adjust: 100%;
-	-ms-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-	text-size-adjust: 100%;
-    
-    font-size: 100%;
+  box-sizing: border-box;
+
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+
+  background-color: #000;
+
+  font: normal 100%/1.5 sans-serif;
+  color: #fff;
 }
 
 *, *::before, *::after {
-    box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+.clock-face {
+  height: 300px;
+  width: 300px;
+}
+
+.hand {
+  width: 14px;
+}
+
+.center {
+  width: 28px;
 }
