--- a/css/main.css
+++ b/css/main.css
@@ -23,16 +23,20 @@ html {
 }
 
 .clock-face {
-  height: 300px;
-  width: 300px;
+    height: 300px;
+    width: 300px;
 }
 
 .hand {
-  width: 14px;
+    width: 14px;
+    left: 50% - 7px;
+    bottom: 50%;
 }
 
 .center {
-  width: 28px;
+    width: 28px;
+    bottom: calc(50% - 14px);
+    left: calc(50% - 14px);  
 }
 
 
