adjusting clock face positioning

--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,24 @@ html {
   box-sizing: inherit;
 }
 
+.main {
+  position: relative;
+}
+
+
+
+
+
+
+
+
 .clock-face {
     height: 300px;
     width: 300px;
+    background-image: url("../img/clock-face.svg");
+    position: relative;
+    top: 135px;
+    left: calc(50% - 150px);
 }
 
 .hand {
