added rotation animation to minute and hour hands

--- a/css/main.css
+++ b/css/main.css
@@ -65,8 +65,24 @@ html {
     left: calc(50% - 150px);
 }
 
-.clock-face:hover .hand-hour {
+.hand-hour {
+    transform: rotate(0deg);
+    transform-origin: 50% 100%;
+    transition: all 6s linear;
+}
     
+.hand-minute {
+    transform: rotate(0deg);
+    transform-origin: 50% 100%;
+    transition: all 6s linear;
+}
+
+.clock-face:hover .hand-hour {
+    transform: rotate(360deg);
+}
+
+.clock-face:hover .hand-minute {
+    transform: rotate(4320deg);
 }
 
 .hand {
